<resources>
    <string name="app_name">Lista de Tarefas</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_input_title">Título</string>
    <string name="label_input_description">Descrição</string>
    <string name="label_data">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_bt_cancel">Cancelar</string>
    <string name="label_bt_new_task">Criar Tarefa</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_empty_message">Ops! Você não possui\nnenhuma tarefa</string>
</resources>